Corrected sidebar labels

--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -132,12 +132,12 @@
       id="sidebar-button"
 
       [ngStyle]="sidebarButtonStyle"
-      [tooltip]="'Dashboard'"
+      [tooltip]="'Clips'"
       [position]="'right'"
       [html]="true"
       [delay]="tooltipDelay"
 
-      routerLink="/Clips"
+      routerLink="/clips"
       routerLinkActive="active"
       [class.activated]="currentUrl == '/clips'">
 
