--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -100,9 +100,9 @@ body {
   background-color: rgb(243, 243, 243);
 }
 
-main {
-  flex: 1 0 auto;
-}
+// main {
+//   flex: 1 0 auto;
+// }
 
 #loading-area {
   width:99px;
