Get user by name working

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -36,7 +36,7 @@
           <mz-dropdown-item><a href="#!">One</a></mz-dropdown-item>
           <mz-dropdown-item><a href="#!">Two</a></mz-dropdown-item>
           <mz-dropdown-divider></mz-dropdown-divider>
-          <mz-dropdown-item><a href="#!">Three</a></mz-dropdown-item>
+          <mz-dropdown-item><a (click)="logout()">Signout</a></mz-dropdown-item>
         </mz-dropdown>
       <button mz-button class="navbar-buttons z-depth-0" id="btn-user-profile">
         <i class="material-icons">account_circle</i>
