--- a/client/src/app/pages/users/users.component.html
+++ b/client/src/app/pages/users/users.component.html
@@ -26,17 +26,26 @@
               type="search">
 
             </mz-input-container>
-            <button mz-button type="button">Clear</button>
-            <button mz-button type="submit" (click)="getUserByName(usernameInput.value)">Submit</button>
+
+            <button mz-button
+            type="button"
+            (click)="clearUserByName()"
+            (click)="usernameInput.value=''">Clear
+            </button>
+
+            <button mz-button
+            type="submit"
+            (click)="getUserByName(usernameInput.value)">Submit
+            </button>
+
           </form>
         </div>
 
         <!-- RESPONSE SECTION -->
         <div class="section">
           <h5>Response</h5>
-
           <div class="row">
-            <div *ngFor="let user of users$">
+            <div *ngFor="let user of usersByName$">
               <div class="col s4">
                 <mz-card class="blue-grey darken-1 white-text" [hoverable]="true">
                   <mz-card-title>{{ user.display_name }}</mz-card-title>
@@ -60,7 +69,6 @@
             </div>
           </div>  
         </div>
-
       </mz-tab-item>
 
 
@@ -73,45 +81,62 @@
           <form novalidate>
             <mz-input-container class="row" id="user-id-input-container">
               <i mz-icon-mdi mz-input-prefix [icon]="'account-search'"></i>
-              <input mz-input placeholder="User ID" length="20" type="search">
+
+              <input mz-input
+              class="form-control"
+              id="user-id-input-field"
+
+              #userIdInput
+
+              placeholder="User ID"
+              length="20"
+              type="search">
+
             </mz-input-container>
-            <button mz-button type="button">Clear</button>
-            <button mz-button type="submit">Submit</button>
+
+            <button mz-button
+            type="button"
+            (click)="clearUserById()"
+            (click)="userIdInput.value=''">Clear
+            </button>
+
+            <button mz-button
+            type="submit"
+            (click)="getUserById(userIdInput.value)">Submit
+            </button>
+
           </form>
         </div>
 
         <!-- RESPONSE SECTION -->
         <div class="section">
-            <h5>Response</h5>
-  
-            <div class="row">
-              <div *ngFor="let user of users$">
-                <div class="col s4">
-                  <mz-card class="blue-grey darken-1 white-text" [hoverable]="true">
-                    <mz-card-title>{{ user.display_name }}</mz-card-title>
-                    <mz-card-content>
-                      <div class="row">
-                        <img class="col s4" src={{user.profile_image_url}}>
-                        <div class="col s8">
-                          <p>User id: {{ user.id }}</p>
-                          <p>User description: {{ user.description }}</p>
-                          <p>Broadcaster type: {{ user.broadcaster_type }}</p>
-                          <p>Channel view count: {{ user.view_count }}</p>
-                        </div>
+          <h5>Response</h5>
+          <div class="row">
+            <div *ngFor="let user of usersById$">
+              <div class="col s4">
+                <mz-card class="blue-grey darken-1 white-text" [hoverable]="true">
+                  <mz-card-title>{{ user.display_name }}</mz-card-title>
+                  <mz-card-content>
+                    <div class="row">
+                      <img class="col s4" src={{user.profile_image_url}}>
+                      <div class="col s8">
+                        <p>User id: {{ user.id }}</p>
+                        <p>User description: {{ user.description }}</p>
+                        <p>Broadcaster type: {{ user.broadcaster_type }}</p>
+                        <p>Channel view count: {{ user.view_count }}</p>
                       </div>
-                    </mz-card-content>
-                    <mz-card-action>
-                      <a href="#">This is a link</a>
-                      <a href="#">This is a link</a>
-                    </mz-card-action>
-                  </mz-card>
-                </div>
+                    </div>
+                  </mz-card-content>
+                  <mz-card-action>
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
+                  </mz-card-action>
+                </mz-card>
               </div>
-            </div>  
-          </div>
-
+            </div>
+          </div>  
+        </div>
       </mz-tab-item>
-
     </mz-tab>
   </mz-card-content>
 </mz-card>
