Fixed Parallax on Landing-page

--- a/client/src/app/pages/landing/landing.component.html
+++ b/client/src/app/pages/landing/landing.component.html
@@ -1,6 +1,7 @@
-<div class="parallax-container">
-    <div class="parallax"><img src="../../../assets/images/parallax/olloweb-solutions-520934-unsplash.jpg"></div>
-</div>
+<mz-parallax [height]="600">
+  <img src="../../../assets/images/parallax/olloweb-solutions-520934-unsplash.jpg">
+</mz-parallax>
+
 <div class="section white">
   <div class="row container">
     <h2 class="header">About</h2>
@@ -17,9 +18,13 @@
         </p>
   </div>
 </div>
-<div class="parallax-container">
-    <div class="parallax"><img src="../../../assets/images/parallax/edho-pratama-152392-unsplash.jpg"></div>
-</div>
+
+
+<mz-parallax [height]="600">
+  <img src="../../../assets/images/parallax/edho-pratama-152392-unsplash.jpg">
+</mz-parallax>
+
+
 <div class="section white">
   <div class="row container">
     <h2 class="header">Features</h2>
@@ -34,9 +39,14 @@
         Risus in hendrerit gravida rutrum quisque non tellus. In mollis nunc sed id. Vitae congue mauris rhoncus aenean vel elit scelerisque. Sit amet nisl purus in mollis nunc sed id semper. Ac turpis egestas maecenas pharetra convallis posuere morbi leo. Risus commodo viverra maecenas accumsan lacus vel facilisis. Nisl nisi scelerisque eu ultrices. Odio ut sem nulla pharetra diam. Malesuada nunc vel risus commodo viverra maecenas accumsan. Potenti nullam ac tortor vitae purus faucibus. Mattis enim ut tellus elementum sagittis. Lorem sed risus ultricies tristique. In fermentum et sollicitudin ac orci phasellus egestas. Quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Tempor orci dapibus ultrices in iaculis nunc.</p>
   </div>
 </div>
-<div class="parallax-container">
-  <div class="parallax"><img src="../../../assets/images/parallax/0456.jpg"></div>
-</div>
+
+
+<mz-parallax [height]="600">
+  <img src="../../../assets/images/parallax/0456.jpg">
+</mz-parallax>
+
+
+
 <div class="section white">
   <div class="row container">
     <h2 class="header">Policy</h2>
