--- a/client/src/app/pages/landing/landing.component.scss
+++ b/client/src/app/pages/landing/landing.component.scss
@@ -5,16 +5,10 @@
  * @Last Modified time: 2018-05-27 10:04:32
  */
 
- .parallax-container {
 
-}
-
-.parallax {
-  z-index: 2;
-}
 
 .parallax img {
-  width: 100%;
+  width: 100% !important;
   // max-width: 800px;
   // max-height: 600px;
 }
