--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -5,9 +5,9 @@
  * @Last Modified time: 2018-06-15 14:35:15
  */
 
-$roboto-font-path: "~materialize-css/dist/fonts/roboto/";
-@import "~materialize-css/dist/css/materialize.min.css";
-@import "~@mdi/font/css/materialdesignicons.min.css";
+// $roboto-font-path: "~materialize-css/dist/fonts/roboto/";
+// @import "~materialize-css/dist/css/materialize.min.css";
+// @import "~@mdi/font/css/materialdesignicons.min.css";
 
 // OVERRIDES
 
