--- a/client/src/app/components/navbar/navbar.component.scss
+++ b/client/src/app/components/navbar/navbar.component.scss
@@ -5,9 +5,6 @@
  * @Last Modified time: 2018-06-13 14:21:46
  */
 
- // NAV
-
-
 // BRAND LOGO
 .brand-logo {
   padding: 0px 0px 0px 20px;
@@ -72,4 +69,5 @@
   max-height: 80px;
   min-width: 80px;
   max-width: 80px;
+  background-color: #263238 !important;
 }
