--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -2,7 +2,7 @@
  * @Author: Nizars
  * @Date: 2018-06-02 22:34:02
  * @Last Modified by: Nizars
- * @Last Modified time: 2018-06-13 15:02:57
+ * @Last Modified time: 2018-06-18 14:29:41
  */
 
 // PAGE
@@ -93,6 +93,10 @@
 // }
 
 .sidebar-body::-webkit-scrollbar {
+  display: none;
+}
+
+.sidebar-body::-moz-scrollbar {
   display: none;
 }
 
